--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -6,4 +6,9 @@
     </style>
 
     <style name="Theme.MeetEase" parent="Base.Theme.MeetEase" />
+
+    <style name="button">
+        <item name="android:background">@drawable/button_shape</item>
+        <item name="backgroundTint">@color/black</item>
+    </style>
 </resources>
