--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,9 +1,90 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".entryModule.LoginActivity">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <ImageView
+        android:id="@+id/imgLogo"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/_120sdp"
+        android:scaleType="fitXY"
+        android:src="@drawable/topScreen" />
+
+    <TextView
+        android:id="@+id/txtHeading"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/imgLogo"
+        android:layout_marginTop="@dimen/_20sdp"
+        android:gravity="center"
+        android:text="LOGIN"
+        android:textSize="@dimen/_20ssp"
+        android:textStyle="bold" />
+
+    <EditText
+        android:id="@+id/etvEmailOrPhone"
+        style="@style/edittext"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/_40sdp"
+        android:layout_below="@id/txtHeading"
+        android:hint="EMAIL OR PHONE"
+        android:imeOptions="actionNext"
+        android:inputType="textAutoComplete"
+        android:minHeight="@dimen/_30sdp"
+        android:paddingStart="@dimen/_20sdp" />
+
+
+    <RelativeLayout
+        android:id="@+id/lytPassword"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/etvEmailOrPhone">
+
+        <EditText
+            android:id="@+id/etvPassword"
+            style="@style/edittext"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="PASSWORD"
+            android:imeOptions="actionDone"
+            android:inputType="textPassword"
+            android:minHeight="@dimen/_30sdp"
+            android:padding="@dimen/_10sdp" />
+
+        <ImageView
+            android:id="@+id/imgPasswordCloseEye"
+            android:layout_width="@dimen/_30sdp"
+            android:layout_height="@dimen/_40sdp"
+            android:layout_alignParentEnd="true"
+            android:layout_marginTop="@dimen/_10sdp"
+            android:layout_marginEnd="@dimen/_30sdp"
+            android:src="@drawable/baseline_eye_24" />
+
+    </RelativeLayout>
+
+    <TextView
+        android:id="@+id/txtResetPassword"
+        android:gravity="center"
+        android:textSize="@dimen/_15sdp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/lytPassword"
+        android:layout_marginTop="@dimen/_10sdp"
+        android:layout_alignParentEnd="true"
+        android:text="Reset My Password"
+        android:layout_marginEnd="@dimen/_20sdp"
+        android:textColor="@color/black" />
+
+    <Button
+        android:id="@+id/btnLogin"
+        style="@style/button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/txtResetPassword"
+        android:layout_centerHorizontal="true"
+        android:text="LOGIN" />
+
+</RelativeLayout>
