--- a/app/src/main/res/layout/activity_home_screen.xml
+++ b/app/src/main/res/layout/activity_home_screen.xml
@@ -1,9 +1,191 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:orientation="vertical"
+    android:gravity="center"
     android:layout_height="match_parent"
-    tools:context=".HomeScreenActivity">
+    tools:context=".homeScreen.HomeScreenActivity">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:layout_marginHorizontal="@dimen/_10sdp">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:weightSum="2">
+            <LinearLayout
+                android:id="@+id/layoutAddReservation"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:background="@drawable/top_left_layout_shape"
+                android:orientation="vertical"
+                android:layout_marginEnd="@dimen/_3sdp"
+                android:layout_height="wrap_content">
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/_50sdp"
+                    android:padding="@dimen/_5sdp"
+                    android:textColor="@color/white"
+                    android:gravity="start"
+                    android:layout_margin="@dimen/_5sdp"
+                    android:layout_marginEnd="@dimen/_3sdp"
+                    android:text="Create a new reservation"
+                    android:textSize="@dimen/_15sdp"/>
+                <ImageView
+                    android:layout_width="@dimen/_50sdp"
+                    android:layout_height="@dimen/_50sdp"
+                    android:layout_gravity="end"
+                    android:layout_margin="@dimen/_8sdp"
+                    android:src="@drawable/img_calendar"/>
+            </LinearLayout>
+
+           <LinearLayout
+               android:id="@+id/layoutUpcomingMeeting"
+               android:layout_width="0dp"
+               android:layout_height="wrap_content"
+               android:layout_marginStart="@dimen/_3sdp"
+               android:orientation="vertical"
+               android:background="@drawable/top_right_layout_shape"
+               android:layout_weight="1">
+               <TextView
+                   android:layout_width="match_parent"
+                   android:layout_height="@dimen/_50sdp"
+                   android:padding="@dimen/_5sdp"
+                   android:textColor="@color/white"
+                   android:gravity="start"
+                   android:layout_margin="@dimen/_5sdp"
+                   android:layout_marginEnd="@dimen/_3sdp"
+                   android:text="Upcoming meeting"
+                   android:textSize="@dimen/_15sdp"/>
+               <ImageView
+                   android:layout_width="@dimen/_50sdp"
+                   android:layout_height="@dimen/_50sdp"
+                   android:layout_gravity="end"
+                   android:layout_margin="@dimen/_8sdp"
+                   android:src="@drawable/img_upcoming"/>
+           </LinearLayout>
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/_6sdp"
+            android:weightSum="2">
+            <LinearLayout
+                android:id="@+id/layoutPreviousMeeting"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:orientation="vertical"
+                android:layout_marginEnd="@dimen/_3sdp"
+                android:background="@color/leafBrown">
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/_50sdp"
+                    android:padding="@dimen/_5sdp"
+                    android:gravity="start"
+                    android:layout_margin="@dimen/_6sdp"
+                    android:textColor="@color/white"
+                    android:text="Previous meeting reservation"
+                    android:textSize="@dimen/_14sdp"/>
+                <ImageView
+                    android:layout_width="@dimen/_50sdp"
+                    android:layout_height="@dimen/_50sdp"
+                    android:layout_gravity="end"
+                    android:layout_margin="@dimen/_8sdp"
+                    android:src="@drawable/img_list"/>
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/layoutUserProfile"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:orientation="vertical"
+                android:layout_marginStart="@dimen/_3sdp"
+                android:background="@color/leafBrown">
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/_50sdp"
+                    android:padding="@dimen/_5sdp"
+                    android:textColor="@color/white"
+                    android:gravity="start"
+                    android:layout_margin="@dimen/_6sdp"
+                    android:layout_marginEnd="@dimen/_3sdp"
+                    android:text="Profile"
+                    android:textSize="@dimen/_15sdp"/>
+                <ImageView
+                    android:layout_width="@dimen/_50sdp"
+                    android:layout_height="@dimen/_50sdp"
+                    android:layout_gravity="end"
+                    android:layout_margin="@dimen/_8sdp"
+                    android:src="@drawable/image_profile"/>
+
+            </LinearLayout>
+
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/_6sdp"
+            android:weightSum="2">
+            <LinearLayout
+                android:id="@+id/layoutContactUs"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:background="@drawable/bottom_left_layout_shape"
+                android:orientation="vertical"
+                android:layout_marginEnd="@dimen/_3sdp"
+                android:layout_weight="1.5">
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:padding="@dimen/_5sdp"
+                    android:text="Contact Us"
+                    android:textColor="@color/white"
+                    android:layout_margin="@dimen/_5sdp"
+                    android:textSize="@dimen/_15sdp"/>
+                <ImageView
+                    android:layout_width="@dimen/_25sdp"
+                    android:layout_height="@dimen/_25sdp"
+                    android:layout_gravity="end"
+                    android:layout_marginEnd="@dimen/_15sdp"
+                    android:layout_marginVertical="@dimen/_5sdp"
+                    android:src="@drawable/img_support"/>
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/layoutLogout"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/_3sdp"
+                android:orientation="vertical"
+                android:background="@drawable/bottom_right_layout_shape"
+                android:layout_weight="0.5">
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:padding="@dimen/_5sdp"
+                        android:text="Logout"
+                        android:textColor="@color/white"
+                        android:layout_marginVertical="@dimen/_5sdp"
+                        android:textSize="@dimen/_15sdp"/>
+                    <ImageView
+                        android:layout_width="@dimen/_25sdp"
+                        android:layout_height="@dimen/_25sdp"
+                        android:layout_gravity="end"
+                        android:layout_margin="@dimen/_5sdp"
+                        android:src="@drawable/img_logout"/>
+
+            </LinearLayout>
+
+        </LinearLayout>
+    </LinearLayout>
+
+
+
+
+</LinearLayout>
