--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -11,69 +11,103 @@
         android:layout_width="match_parent"
         android:layout_height="@dimen/_140sdp"
         android:scaleType="fitXY"
-        android:src="@drawable/back_ground_image"/>
+        android:src="@drawable/back_ground_image" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Sign Up"
+        android:layout_margin="@dimen/_15sdp"
+        android:text="SIGN UP"
         android:textSize="@dimen/_20sdp"
-        android:textStyle="bold"
-        android:layout_margin="@dimen/_15sdp"/>
+        android:textStyle="bold" />
 
     <EditText
         android:id="@+id/etvName"
+        style="@style/edittext"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="enter your full name"
-        android:layout_marginHorizontal="@dimen/_20sdp"
-        android:paddingStart="@dimen/_10sdp"/>
+        android:hint="FULL NAME"
+        android:imeOptions="actionNext"
+        android:inputType="textAutoComplete" />
+
     <EditText
         android:id="@+id/etvMobileNumber"
+        style="@style/edittext"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="enter your mobile number"
-        android:layout_marginHorizontal="@dimen/_20sdp"
-        android:layout_marginTop="@dimen/_10sdp"
-        android:paddingStart="@dimen/_10sdp"/>
+        android:hint="PHONE NUMBER"
+        android:maxLength="10"
+        android:imeOptions="actionNext"
+        android:inputType="phone" />
+
     <EditText
         android:id="@+id/etvEmail"
+        style="@style/edittext"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="enter your Email"
-        android:layout_marginHorizontal="@dimen/_20sdp"
-        android:layout_marginTop="@dimen/_10sdp"
-        android:paddingStart="@dimen/_10sdp"/>
-    <EditText
-        android:id="@+id/etvPassword"
+        android:hint="EMAIL ADDRESS"
+        android:imeOptions="actionNext"
+        android:inputType="textAutoComplete" />
+
+    <RelativeLayout
+        android:id="@+id/lytPassword"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="enter your password"
-        android:layout_marginHorizontal="@dimen/_20sdp"
-        android:layout_marginTop="@dimen/_10sdp"
-        android:paddingStart="@dimen/_10sdp"/>
+        android:layout_below="@id/etvEmailOrPhone">
+
+        <EditText
+            android:id="@+id/etvPassword"
+            style="@style/edittext"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="PASSWORD"
+            android:imeOptions="actionNext"
+            android:inputType="textPassword"
+            android:padding="@dimen/_10sdp" />
+
+        <ImageView
+            android:id="@+id/imgPasswordCloseEye"
+            android:layout_width="@dimen/_30sdp"
+            android:layout_height="@dimen/_40sdp"
+            android:layout_alignParentEnd="true"
+            android:layout_marginTop="@dimen/_10sdp"
+            android:layout_marginEnd="@dimen/_20sdp"
+            android:src="@drawable/baseline_eye_24" />
+
+    </RelativeLayout>
+
     <EditText
         android:id="@+id/etvConfirmPassword"
+        style="@style/edittext"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="enter your ConfirmPassword"
-        android:layout_marginHorizontal="@dimen/_20sdp"
-        android:layout_marginTop="@dimen/_20sdp"
-        android:paddingStart="@dimen/_10sdp"/>
+        android:hint="CONFIRM PASSWORD"
+        android:imeOptions="actionDone"
+        android:inputType="textAutoComplete" />
+
     <Button
         android:id="@+id/btnSignUp"
-        android:layout_width="match_parent"
+        style="@style/button"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/_10sdp"
-        android:layout_marginHorizontal="@dimen/_20sdp"
-        android:text="sign up"
-        android:textSize="@dimen/_15sdp"/>
+        android:layout_gravity="center"
+        android:layout_marginTop="@dimen/_20sdp"
+        android:paddingStart="@dimen/_40sdp"
+        android:paddingEnd="@dimen/_40sdp"
+        android:text="SIGNUP"
+        android:textSize="@dimen/_15sdp" />
+
     <TextView
         android:id="@+id/txtLogin"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="login"
+        android:layout_gravity="center"
+        android:layout_marginTop="@dimen/_5sdp"
         android:gravity="center"
-        android:layout_marginTop="@dimen/_30sdp"
-        android:textSize="@dimen/_15sdp"/>
+        android:paddingHorizontal="@dimen/_10sdp"
+        android:paddingVertical="@dimen/_10sdp"
+        android:text="@string/account_login"
+        android:textColor="@color/brown"
+        android:textStyle="normal" />
+
 </LinearLayout>
