--- a/app/src/main/res/layout/activity_create_reservation.xml
+++ b/app/src/main/res/layout/activity_create_reservation.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".homeScreen.previousMeeting.PreviousMeetingActivity">
+    tools:context=".homeScreen.createReservation.CreateReservationActivity">
 
     <EditText
         android:id="@+id/etvSearch"
