--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -11,7 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="@dimen/_120sdp"
         android:scaleType="fitXY"
-        android:src="@drawable/topScreen" />
+        android:src="@drawable/back_ground_image" />
 
     <TextView
         android:id="@+id/txtHeading"
