--- a/app/src/main/res/layout/activity_guide.xml
+++ b/app/src/main/res/layout/activity_guide.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#E1B77F"
-    tools:context=".entryModule.GuideActivity">
+    tools:context=".GuideActivity">
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
