--- a/app/src/main/res/layout/activity_home_screen.xml
+++ b/app/src/main/res/layout/activity_home_screen.xml
@@ -269,13 +269,13 @@
                 android:orientation="vertical"
                 android:background="#BC9C74">
 
-                <ImageView
+                <de.hdodenhof.circleimageview.CircleImageView
                     android:id="@+id/ivSettingProfile"
                     android:layout_width="@dimen/_80sdp"
                     android:layout_height="@dimen/_80sdp"
                     android:layout_gravity="center_horizontal"
                     android:layout_marginTop="@dimen/_20sdp"
-                    android:src="@drawable/img_back"/>
+                    android:src="@drawable/logo"/>
                 <TextView
                     android:id="@+id/tvSettingName"
                     android:layout_width="match_parent"
