--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,5 +7,6 @@
     <color name="brown">#C37E41</color>
     <color name="mintGreen">#47B69F</color>
     <color name="orange">#FF5722</color>
+    <color name="darkLeafBrown">#916630</color>
     <color name="leafBrown">#C99145</color>
 </resources>
