--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -26,7 +26,7 @@
         style="@style/edittext"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="FULL NAME"
+        android:hint="Full Name"
         android:imeOptions="actionNext"
         android:inputType="textAutoComplete" />
 
@@ -35,10 +35,10 @@
         style="@style/edittext"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="PHONE NUMBER"
-        android:maxLength="10"
+        android:hint="Phone Number"
         android:imeOptions="actionNext"
-        android:inputType="phone" />
+        android:inputType="phone"
+        android:maxLength="10" />
 
     <EditText
         android:id="@+id/etvEmail"
@@ -60,7 +60,7 @@
             style="@style/edittext"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="PASSWORD"
+            android:hint="Password"
             android:imeOptions="actionNext"
             android:inputType="textPassword"
             android:padding="@dimen/_10sdp" />
@@ -81,7 +81,7 @@
         style="@style/edittext"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="CONFIRM PASSWORD"
+        android:hint="Confirm Password"
         android:imeOptions="actionDone"
         android:inputType="textAutoComplete" />
 
@@ -97,17 +97,27 @@
         android:text="SIGNUP"
         android:textSize="@dimen/_15sdp" />
 
-    <TextView
-        android:id="@+id/txtLogin"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
         android:layout_marginTop="@dimen/_5sdp"
         android:gravity="center"
         android:paddingHorizontal="@dimen/_10sdp"
-        android:paddingVertical="@dimen/_10sdp"
-        android:text="@string/account_login"
-        android:textColor="@color/brown"
-        android:textStyle="normal" />
+        android:paddingVertical="@dimen/_10sdp">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Already Have an Account? " />
+
+        <TextView
+            android:id="@+id/txtLogin"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/account_login"
+            android:textColor="@color/brown"
+            android:textStyle="bold" />
+
+    </LinearLayout>
 
 </LinearLayout>
