--- a/app/src/main/res/layout/activity_book_meeting.xml
+++ b/app/src/main/res/layout/activity_book_meeting.xml
@@ -201,7 +201,7 @@
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
                             android:layout_weight="0.7"
-                            android:text="Room No"
+                            android:text="Location"
                             android:textColor="@color/white"
                             android:textSize="@dimen/_18sdp"
                             android:textStyle="bold" />
