--- a/app/src/main/res/layout/activity_create_reservation.xml
+++ b/app/src/main/res/layout/activity_create_reservation.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/lightLeafBrown"
     tools:context=".homeScreen.createReservation.CreateReservationActivity">
 
     <EditText
@@ -13,6 +14,7 @@
         android:layout_height="wrap_content"
         android:drawableStart="@drawable/ic_search"
         android:drawablePadding="@dimen/_5sdp"
+        android:layout_marginHorizontal="@dimen/_10sdp"
         android:hint="search"
         android:paddingStart="@dimen/_10sdp"
         android:paddingEnd="@dimen/_30sdp"
@@ -35,7 +37,8 @@
         android:layout_height="wrap_content"
         android:gravity="center"
         android:text="No Data Found"
-        android:textColor="@color/leafBrown"
+        android:textStyle="bold"
+        android:textColor="@color/white"
         android:textSize="@dimen/_20sdp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
