--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -31,4 +31,9 @@
         <item name="android:layout_marginTop">@dimen/_10sdp</item>
         <item name="android:layout_marginEnd">@dimen/_10sdp</item>
     </style>
+
+    <style name="RatingBar" parent="Theme.AppCompat">
+        <item name="colorControlNormal">@color/black</item>
+        <item name="colorControlActivated">@color/darkLeafBrown</item>
+    </style>
 </resources>
