--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -50,6 +50,7 @@
                 <ImageView
                     android:id="@+id/imgFavourite"
                     android:layout_width="@dimen/_50sdp"
+                    android:focusable="true"
                     android:layout_height="@dimen/_30sdp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
