--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -61,6 +61,7 @@
         android:layout_marginTop="@dimen/_16sdp"
         android:hint="PHONE NUMBER"
         android:inputType="number"
+        android:maxLength="10"
         android:imeOptions="actionNext"
         android:textColor="@color/black"
         app:backgroundTint="@color/white"
@@ -75,7 +76,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/_16sdp"
         android:hint="abc@gmail.com"
-        android:inputType="textAutoComplete"
+        android:inputType="textEmailAddress"
         android:imeOptions="actionDone"
         android:textColor="@color/black"
         app:backgroundTint="@color/white"
