--- a/app/src/main/res/layout/activity_change_password.xml
+++ b/app/src/main/res/layout/activity_change_password.xml
@@ -19,54 +19,54 @@
         android:id="@+id/etvOldPassword"
         style="@style/edittext"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/_40sdp"
+        android:layout_height="wrap_content"
         android:layout_below="@id/txtHeading"
         android:layout_marginTop="@dimen/_20sdp"
         android:hint="Old Password"
         android:imeOptions="actionNext"
         android:inputType="textAutoComplete" />
 
- <EditText
+    <EditText
         android:id="@+id/etvNewPassword"
         style="@style/edittext"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/_40sdp"
+        android:layout_height="wrap_content"
         android:layout_below="@id/etvOldPassword"
-     android:layout_marginTop="@dimen/_10sdp"
+        android:layout_marginTop="@dimen/_10sdp"
         android:hint="New Password"
         android:imeOptions="actionNext"
         android:inputType="textAutoComplete" />
 
- <EditText
+    <EditText
         android:id="@+id/etvConfirmPassword"
         style="@style/edittext"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/_40sdp"
-     android:layout_marginTop="@dimen/_10sdp"
+        android:layout_height="wrap_content"
         android:layout_below="@id/etvNewPassword"
+        android:layout_marginTop="@dimen/_10sdp"
         android:hint="Confirm Password"
         android:imeOptions="actionDone"
         android:inputType="textAutoComplete" />
 
     <Button
         android:id="@+id/btnSave"
+        style="@style/button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/_20sdp"
         android:layout_below="@id/etvConfirmPassword"
         android:layout_centerHorizontal="true"
-        style="@style/button"
-        android:text="Save"/>
+        android:layout_marginTop="@dimen/_20sdp"
+        android:text="Save" />
 
     <TextView
         android:id="@+id/txtForgotPassword"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:padding="@dimen/_5sdp"
-        android:layout_centerHorizontal="true"
         android:layout_below="@id/btnSave"
-        android:textStyle="bold"
+        android:layout_centerHorizontal="true"
+        android:padding="@dimen/_5sdp"
+        android:text="FORGOT PASSWORD"
         android:textColor="@color/white"
-        android:text="FORGOT PASSWORD"/>
+        android:textStyle="bold" />
 
 </RelativeLayout>
