--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -111,15 +111,15 @@
             android:textColor="@color/brown"
             android:textStyle="bold" />
 
-
     </LinearLayout>
 
     <ImageView
         android:id="@+id/imgGoogle"
         android:layout_width="@dimen/_30sdp"
         android:layout_height="@dimen/_30sdp"
-        android:src="@drawable/ic_fb_logo"
-        android:layout_below="@id/layout"/>
+        android:layout_below="@id/layout"
+        android:layout_centerHorizontal="true"
+        android:src="@drawable/google" />
 
 
 </RelativeLayout>
