--- a/app/src/main/res/layout/activity_book_meeting.xml
+++ b/app/src/main/res/layout/activity_book_meeting.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#D5C1A6"
+    android:background="@color/lightLeafBrown"
     tools:context=".homeScreen.createReservation.BookMeetingActivity">
 
     <ImageView
