--- a/app/src/main/res/layout/activity_home_screen.xml
+++ b/app/src/main/res/layout/activity_home_screen.xml
@@ -280,7 +280,7 @@
             android:id="@+id/scrollView"
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_weight="1">
+            android:layout_weight="1.2">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -304,6 +304,15 @@
                     android:gravity="center_horizontal"
                     android:hint="Anand Patel"
                     android:textSize="@dimen/_20sdp" />
+
+                <TextView
+                    android:id="@+id/tvSettingEmail"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/_5sdp"
+                    android:gravity="center_horizontal"
+                    android:hint="anandkasodiya7007@gmail.com"
+                    android:textSize="@dimen/_10sdp" />
 
                 <View
                     android:layout_width="match_parent"
@@ -481,7 +490,7 @@
                         android:layout_marginTop="@dimen/_10sdp"
                         android:layout_marginBottom="@dimen/_10sdp"
                         android:gravity="center_horizontal"
-                        android:text="Help and Support"
+                        android:text="FAQs"
                         android:textSize="@dimen/_15sdp"
                         app:backgroundTint="@color/gray" />
                 </LinearLayout>
@@ -528,7 +537,7 @@
             android:id="@+id/tvTrans"
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_weight="1"
+            android:layout_weight="0.8"
             android:background="#A6000000" />
     </LinearLayout>
 
