--- a/app/src/main/res/layout/activity_previous_meeting.xml
+++ b/app/src/main/res/layout/activity_previous_meeting.xml
@@ -3,47 +3,59 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:background="@color/lightLeafBrown"
     android:layout_height="match_parent"
+    android:background="@color/lightLeafBrown"
     tools:context=".homeScreen.previousMeeting.PreviousMeetingActivity">
 
     <EditText
         android:id="@+id/etvSearch"
+        style="@style/edittext"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        style="@style/edittext"
-        app:layout_constraintTop_toTopOf="parent"
         android:drawableStart="@drawable/ic_search"
-        android:paddingStart="@dimen/_10sdp"
         android:drawablePadding="@dimen/_5sdp"
-        android:singleLine="true"
+        android:hint="search"
+        android:paddingStart="@dimen/_10sdp"
         android:paddingEnd="@dimen/_30sdp"
-        android:hint="search"/>
+        android:singleLine="true"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <ImageView
         android:id="@+id/ivClose"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/ic_close"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginTop="@dimen/_20sdp"
-        android:layout_marginEnd="@dimen/_20sdp"/>
+        android:layout_marginEnd="@dimen/_20sdp"
+        android:src="@drawable/ic_close"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <TextView
         android:id="@+id/tvNoData"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:text="No Data Found"
         android:gravity="center"
+        android:text="No Data Found"
         android:textColor="@color/leafBrown"
-        android:textSize="@dimen/_20sdp"/>
-    <androidx.recyclerview.widget.RecyclerView
+        android:textSize="@dimen/_20sdp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+        android:id="@+id/swipe"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginTop="@dimen/_60sdp"
+        app:layout_constraintTop_toTopOf="parent">
 
-        android:layout_marginTop="@dimen/_50sdp"
-        android:id="@+id/recyclerviewPreviousMeeting"/>
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recyclerviewPreviousMeeting"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginTop="@dimen/_50sdp" />
+
+    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
