--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -33,6 +33,8 @@
         android:id="@+id/imgEdit"
         android:layout_width="@dimen/_30sdp"
         android:layout_height="@dimen/_30sdp"
+        android:layout_marginTop="-50dp"
+        android:layout_marginStart="@dimen/_105sdp"
         android:src="@drawable/baseline_photo_camera_24"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
