--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -23,7 +23,7 @@
         android:layout_height="@dimen/_150sdp"
         android:layout_marginTop="@dimen/_50sdp"
         android:src="@drawable/image_profile"
-        app:civ_border_color="#FF000000"
+        app:civ_border_color="@color/darkLeafBrown"
         app:civ_border_width="2dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -35,7 +35,7 @@
         android:layout_height="@dimen/_30sdp"
         android:layout_marginTop="-50dp"
         android:layout_marginStart="@dimen/_105sdp"
-        android:src="@drawable/baseline_photo_camera_24"
+        android:src="@drawable/round_add_24"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/imgProfileImage" />
