--- a/app/src/main/res/layout/fragment_filter.xml
+++ b/app/src/main/res/layout/fragment_filter.xml
@@ -37,7 +37,11 @@
             <com.google.android.material.slider.RangeSlider
                 android:id="@+id/priceRangeSlider"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:background="@color/white"
+                android:stepSize="1"
+                android:valueFrom="0"
+                android:valueTo="5000"/>
 
             <TextView
                 android:layout_width="wrap_content"
@@ -51,7 +55,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:numStars="5"
-                android:rating="5"
+                android:rating="0"
                 android:stepSize="1" />
 
             <LinearLayout
